<resources>
    <string name="app_name">SendingSystemClient</string>
    <string name="sending_system">Sending system</string>
    <string name="server_ip">Server IP</string>
    <string name="sending_data">Sending data</string>
    <string name="ipv4">IPv4</string>
    <string name="ipv6">IPv6</string>
    <string name="send">Send</string>
    <string name="server_port">Server port</string>
    <string name="default_port">5000</string>
    <string name="default_server">192.168.1.2</string>
    <string name="save_to_path">Save to path</string>
    <string name="data_type">Data type</string>
</resources>